--- a/styless.css
+++ b/styless.css
@@ -1,134 +1,56 @@
-:root{
-    /* colours */
-    --desaturated-red: hsl(0, 36%, 70%);
-    --soft-red: hsl(0, 93%, 68%);
-    --grayish-red: hsl(0, 6%, 24%); 
-}
+/* ## Colors
 
-body{
+### Primary
+
+- Desaturated Red: hsl(0, 36%, 70%)
+- Soft Red: hsl(0, 93%, 68%)
+
+### Neutral
+
+- Dark Grayish Red: hsl(0, 6%, 24%)
+
+### Gradients
+
+- Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%)
+- Linear, 135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%)
+
+## Typography
+
+### Body Copy
+
+- Font size: 16px
+
+### Font
+
+- Family: [Josefin Sans](https://fonts.google.com/specimen/Josefin+Sans)
+- Weights: 300, 400, 600 */
+
+
+
+body {
+    font-family: 'Josefin Sans', sans-serif;
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    display: flex;
-    font-family: 'Josefin Sans';
-    /* overflow: hidden; */
+    /* background-color: #FBAB7E; */
+    /* background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%); */
+    /* background-color: hsl(0, 0%, 100%);
+    background-color: Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%) */
 }
 
-.left{
-    background-image: url(./images/bg-pattern-desktop.svg);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    justify-self: center;
+.content {
+    padding: 6% 0;
 }
-
-.container{
-    width: auto;
-    margin: 90px 90px;
-    max-width: 100%;
-}
-
-main{
-    margin: 50px auto 0 auto;
-}
-
-.heading{
+.big-heading {
+    font-family: "Josefin Sans";
     text-transform: uppercase;
-    font-size: 65px;
-    line-height: 1.1;
-    letter-spacing: 20px;
-    margin-bottom: 15px;
-}
-
-.head{
-    color: var(--desaturated-red);
     font-weight: 300;
+    font-size: 6rem;
 }
 
-.paragraph{
-    width: 80%;
-    color: var(--desaturated-red);
-    line-height: 1.5;
+.big-heading>span {
+    color: hsl(0, 36%, 70%);
 }
 
-form{
-    border: 1px solid var(--desaturated-red);
-    border-radius: 50px;
-    width: 85%;
-    margin: 20px 0;
-}
-
-form input{
-    outline: none;
-    border-radius: 50px 0px 0 50px;
-    border: 0.1px;
-    width: 80%;
-}
-
-::placeholder, :active{
-    padding-left: 20px;
-    font-family: 'Josefin Sans';
-    color: var(--desaturated-red);
-}
-
-.input-class{
-    display: flex;
-    justify-content: space-between;
-    height: 50px;
-    border-radius: 50px;
-}
-
-.btn{
-    padding: 10px 20px;
-    border-radius: 50px 50px;
-    height: 32px;
-    width: 60px;
-    /* background-color: var(--soft-red); */
-    display: flex;
-    cursor: pointer;
-    background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
-}
-
-.fa{
-    color: white;
-    margin: -10px auto;
-}
-
-@media (min-width:200px) and (max-width: 768px) {
-    body{
-        flex-direction: column;
-    }
-
-    nav{
-        margin-top: -50px;
-    }
-
-    main{
-        text-align: center;
-    }
-
-    .heading{
-        text-align: center;
-        font-size: 48px;
-    }
-
-    form{
-        width: auto;
-    }
-
-    .paragraph{
-        width: auto;
-    }
-
-    .right{
-        width: auto;
-        height: 150px;
-    }
-
-    .right img{
-        display: block;
-        margin: 0px auto;
-        width: 100%;  
-        height: 350px; 
-    }
+.waitlist-signup {
+    border-radius: 100px;
+    background-color: red;
 }
